--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<header class="header"></header>
-<footer class="footer"></footer>
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <title></title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="header"></header>   
+</body>
+</html>
